# mssys-jni

./: CMakeLists.txt  ReadMe.md
src/main/Default/java/com/mssys/: Identify.java  PartitionInfo.java
src/main/OpenBSD/java/com/mssys/: Identify.java  PartitionInfo.java
src/main/c/: base-jni.h  file-jni.h  mssys-jni.c
src/main/java/com/mssys/: Br.java  Exfat.java  Fat12.java  Fat16.java  Fat32.java  FileData.java  MsSys.java  Ntfs.java  OemId.java
src/test/java/com/mssys/: MsSysTest.java
src/test/res/: br.img.xz  exfat.img.xz  fat12.img.xz  fat16.img.xz  fat32.img.xz  ntfs.img.xz  res.tar.xz
